fix nav collapse icon positioning

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -971,6 +971,7 @@ section.article-author {
     }
 
     label.nav-toggle-collapse {
+      line-height: 1;
       transition: transform 0.3s ease-in-out;
       -moz-transition: transform 0.3s ease-in-out;
       -webkit-transition: transform 0.3s ease-in-out;
